--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,19 @@
 
     {% include header.html %}
 
+    {% include social.html %}
+
+    {% include ads.html %}
+
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
 
-    {% include footer.html %}
+    <script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
 
   </body>
 
