Fix Feed and ads

--- a/_includes/ads.html
+++ b/_includes/ads.html
@@ -1,6 +1,8 @@
 <!-- devnaestrada header -->
-<ins class="adsbygoogle" 
-	style="display:block" 
-	data-ad-client="ca-pub-8700005480883211" 
-	data-ad-slot="8481281685" 
-	data-ad-format="auto"></ins>
+<div class="ad-holder">
+	<ins class="adsbygoogle" 
+		style="display:block" 
+		data-ad-client="ca-pub-8700005480883211" 
+		data-ad-slot="3235326887" 
+		data-ad-format="auto"></ins>
+</div>
