Added boo-box ad

--- a/_includes/ads.html
+++ b/_includes/ads.html
@@ -1,8 +1,23 @@
-<!-- devnaestrada header -->
-<div class="ad-holder">
-	<ins class="adsbygoogle" 
-		style="display:block" 
-		data-ad-client="ca-pub-8700005480883211" 
-		data-ad-slot="3235326887" 
-		data-ad-format="auto"></ins>
+<!-- super banner -->
+<div class="super-banner">
+	<script type="text/javascript">
+	bb_bid = "551017";
+	bb_lang = "pt-BR";
+	bb_name = "custom";
+	bb_limit = "8";
+	bb_format = "bbb";
+	</script>
+	<script type="text/javascript" src="http://static.boo-box.com/javascripts/embed.js"></script>
+</div>
+
+<!-- medium banner -->
+<div class="medium-banner">
+	<script type="text/javascript">
+		bb_bid = "551017";
+		bb_lang = "pt-BR";
+		bb_name = "custom";
+		bb_limit = "6";
+		bb_format = "bbn";
+	</script>
+	<script type="text/javascript" src="http://static.boo-box.com/javascripts/embed.js"></script>
 </div>
