--- a/_sass/core/config/_units.scss
+++ b/_sass/core/config/_units.scss
@@ -1,3 +1,5 @@
+$max-width: em(600);
+
 $iphone-retina: new-breakpoint(min-width 320px 4);
 $mobile: new-breakpoint(min-width 480px 4);
 $tablet: new-breakpoint(min-width 768px 8);
