--- a/_sass/modules/structure/_social-nav.scss
+++ b/_sass/modules/structure/_social-nav.scss
@@ -1,49 +1,64 @@
 .social-nav {
-	text-align: center;
-	margin-top: 30px;
+  text-align: center;
+  margin-top: 30px;
 
-	ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-	}
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 
-	li {
-		display: inline-block;
+  li {
+    display: inline-block;
 
-		a {
-			background-repeat: no-repeat;
-			background-size: 24px;
-			display: block;
-			height: 24px;
-			height: 28px;
-			text-indent: -9999px;
-			width: 24px;
-			width: 28px;
+    a {
+      background-repeat: no-repeat;
+      background-size: 24px;
+      display: block;
+      height: 24px;
+      height: 28px;
+      text-indent: -9999px;
+      width: 24px;
+      width: 28px;
 
-			&.nav-itunes {
-				background-image: url('../img/icon/itunes.png');
-			}
+      // &:before {
+      //   content: ""
+      // }
 
-			&.nav-feed {
-				background-image: url('../img/icon/feed.png');
-			}
+      // &:after {
+      //   content: attr(data-hint);
+      //   background-color: #ccc;
+      //   color: #fff;
+      //   padding: rem(8) rem(10);
+      //   font-size: rem(12);
+      //   white-space: nowrap;
+      //   position: absolute;
+      //   visibility: hide
+      // }
 
-			&.nav-twitter {
-				background-image: url('../img/icon/twitter.png');
-			}
+      &.nav-itunes {
+        background-image: url('../img/icon/itunes.png');
+      }
 
-			&.nav-facebook {
-				background-image: url('../img/icon/facebook.png');
-			}
+      &.nav-feed {
+        background-image: url('../img/icon/feed.png');
+      }
 
-			&.nav-soundcloud {
-				background-image: url('../img/icon/soundcloud.png');
-			}
+      &.nav-twitter {
+        background-image: url('../img/icon/twitter.png');
+      }
 
-			&.nav-github {
-				background-image: url('../img/icon/github.png');
-			}
-		}
-	}
+      &.nav-facebook {
+        background-image: url('../img/icon/facebook.png');
+      }
+
+      &.nav-soundcloud {
+        background-image: url('../img/icon/soundcloud.png');
+      }
+
+      &.nav-github {
+        background-image: url('../img/icon/github.png');
+      }
+    }
+  }
 }
