Change anuncie text, fix media queries to home and post cast

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,13 @@ layout: default
   </div>
 </div>
 
+<div class="post-social">
+  <h2 class="post-social__title">
+    Compartilhe esse post
+  </h2>
+  <a class="twitter-share-button" href="https://twitter.com/intent/tweet" data-counturl="https://twitter.com/devnaestrada">Tweet</a>
+</div>
+
 <!-- Disqus -->
 {% if site.disqus_shortname %}
   <div class="disqus-comments">
