--- a/public/assets/scss/modules/blocks/_home-cast.scss
+++ b/public/assets/scss/modules/blocks/_home-cast.scss
@@ -1,17 +1,34 @@
 .home-cast__avatar {
-  max-width: 50px;
-  max-height: 50px;
   border-radius: 50%;
+  display: none;
   float: left;
+  max-height: 50px;
+  max-width: 50px;
+
+  @media screen and (min-width: $tablet) {
+    display: block;
+  }
 }
 
 .home-cast__holder {
-  margin-left: 70px;
   padding-top: 10px;
+
+  @media screen and (min-width: $tablet) {
+    margin-left: 70px;
+  }
 }
 
 .home-cast__title {
   margin: 0;
+  font-size: 1em;
+
+  @media screen and (min-width: $mobile) {
+    font-size: 1.2em;
+  }
+
+  @media screen and (min-width: $tablet) {
+    font-size: 1.5em;
+  }
 
   .fa {
     font-size: 15px;
