--- a/public/assets/scss/modules/blocks/_post-cast.scss
+++ b/public/assets/scss/modules/blocks/_post-cast.scss
@@ -13,8 +13,16 @@
 .post-cast__header__title {
   color: $post-title-color;
   font-weight: bold;
-  font-size: 2.1em;
+  font-size: 1em;
   margin-top: 5px;
+
+  @media screen and (min-width: $mobile) {
+    font-size: 1.5em;
+  }
+
+  @media screen and (min-width: $tablet) {
+    font-size: 2.1em;
+  }
 
   .fa {
     font-size: 14px;
@@ -41,6 +49,25 @@
 
 .post-cast__content__audio {
   margin-bottom: 30px;
+}
+
+.post-social {
+  margin: 30px 0;
+
+  &:before {
+    content: "";
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: $post-hr-color;
+    margin: 25px 0;
+  }
+}
+
+.post-social__title {
+  color: $post-title-color;
+  font-weight: bold;
+  font-size: 1em;
 }
 
 .disqus-comments {
