DNE #27 + Added Loja

--- a/_includes/modules/cover-photo.html
+++ b/_includes/modules/cover-photo.html
@@ -22,6 +22,10 @@
 			<a href="http://www.github.com/{{ site.github_user }}" class="social-nav__link" title="Código fonte no github">
 				<i class="fa fa-github"></i>
 			</a>
+
+			<a href="{{ "feed.xml" | prepend: site.baseurl }}" class="social-nav__link" title="RSS">
+				<i class="fa fa-rss"></i>
+			</a>
 		</nav>
 	</div>
 </section>
