--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -4,7 +4,7 @@
 			<img src="{{ "public/assets/img/brand.png" | prepend: site.baseurl }}" alt="DevNaEstrada" class="image-block" />
 		</a>
 		<a href="{{ "criadores" | prepend: site.baseurl }}" class="main-nav__link">Criadores</a>
-		<a href="{{ "feed.xml" | prepend: site.baseurl }}" class="main-nav__link">Feed</a>
+		<a href="{{ "loja" | prepend: site.baseurl }}" class="main-nav__link">Camisetas</a>
 		<a href="{{ site.itunes_itpc }}" class="main-nav__link">Itunes</a>
 		<span class="main-nav__link github-star">
 			<a class="github-button" href="https://github.com/devnaestrada/devnaestrada.com.br" data-icon="octicon-star" data-count-href="/devnaestrada/devnaestrada.com.br/stargazers" data-count-api="/repos/devnaestrada/devnaestrada.com.br#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star devnaestrada/devnaestrada.com.br on GitHub">Star</a>
