--- a/public/assets/scss/modules/structure/_header.scss
+++ b/public/assets/scss/modules/structure/_header.scss
@@ -14,7 +14,7 @@ header {
   padding: 22px 15px;
   text-align: center;
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $header-menu) {
     float: left;
     text-align: left;
   }
@@ -32,7 +32,7 @@ header {
       margin-right: auto;
     }
 
-    @media screen and (min-width: $tablet) {
+    @media screen and (min-width: $header-menu) {
       display: inline-block;
       vertical-align: middle;
     }
@@ -46,7 +46,7 @@ header {
     margin-right: 0.9em;
     margin-top: 0.9em;
 
-    @media screen and (min-width: $tablet) {
+    @media screen and (min-width: $header-menu) {
       margin-top: 0;
     }
   }
@@ -65,7 +65,7 @@ header {
   padding-bottom: 20px;
   text-align: center;
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $header-menu) {
     float: right;
     text-align: right;
     padding: 22px 15px 20px 0;
