--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -1,7 +1,7 @@
 <header>
 	<nav class="main-nav">
 		<a href="/" class="brand">
-			<img src="{{ "public/assets/img/brand.png" | prepend: site.baseurl }}" alt="DevNaEstrada" class="image-block" />
+			<img src="{{ "public/assets/img/brand.png" | prepend: site.baseurl }}" alt="DevNaEstrada" />
 		</a>
 		<a href="{{ "criadores" | prepend: site.baseurl }}" class="main-nav__link">Criadores</a>
 		<a href="{{ "loja" | prepend: site.baseurl }}" class="main-nav__link">Camisetas</a>
