--- a/public/assets/scss/modules/structure/_header.scss
+++ b/public/assets/scss/modules/structure/_header.scss
@@ -25,11 +25,16 @@ header {
 
   .brand {
     display: block;
-    margin-right: 0.9em;
 
-    .image-block {
+    @media screen and (min-width: $notebook) {
+      margin-right: 0.9em;
+    }
+
+    img {
       margin-left: auto;
       margin-right: auto;
+      max-width: 300px;
+      width: 100%;
     }
 
     @media screen and (min-width: $header-menu) {
