colocando o link do twitter do Ramon, no footer :)

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -1,5 +1,5 @@
 <footer>
 	<p class="footer-text">
-		Feito com <i class="fa fa-heart"></i> por <a href="http://www.twitter.com/femontanha">@femontanha</a> and <a href="http://www.twitter.com/femontanha">@raymonsanches</a>
+		Feito com <i class="fa fa-heart"></i> por <a href="http://www.twitter.com/femontanha">@femontanha</a> and <a href="http://twitter.com/raymonsanches">@raymonsanches</a>
 	</p>
 </footer>
