--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -4,6 +4,7 @@
 			<img src="{{ "public/assets/img/brand.png" | prepend: site.baseurl }}" alt="DevNaEstrada" />
 		</a>
 		<a href="{{ "criadores" | prepend: site.baseurl }}" class="main-nav__link">Criadores</a>
+		<a href="{{ "apoiadores" | prepend: site.baseurl }}" class="main-nav__link">Apoiadores</a>
 		<a href="{{ site.itunes_itpc }}" class="main-nav__link">Itunes</a>
 		<span class="main-nav__link github-star">
 			<a class="github-button" href="https://github.com/devnaestrada/devnaestrada.com.br" data-icon="octicon-star" data-count-href="/devnaestrada/devnaestrada.com.br/stargazers" data-count-api="/repos/devnaestrada/devnaestrada.com.br#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star devnaestrada/devnaestrada.com.br on GitHub">Star</a>
@@ -15,7 +16,7 @@
 		</span>
 		<a href="https://apoia.se/devnaestrada" class="btn" target="_blank">
 			<span class="more">QUERO!</span>
-			<span class="advertiser">Quero Apoiar esse projeto</span>
+			<span class="advertiser">Quero Apoiar</span>
 		</a>
 	</nav>
 </header>
