--- a/css/main.scss
+++ b/css/main.scss
@@ -26,6 +26,7 @@
 @import "modules/personal/profile";
 @import "modules/blocks/home-cast";
 @import "modules/blocks/post-cast";
+@import "modules/blocks/supporters";
 
 // layout
 @import "layout/structure";
