New supporters and categoryze them

--- a/public/assets/scss/modules/blocks/_supporters.scss
+++ b/public/assets/scss/modules/blocks/_supporters.scss
@@ -22,4 +22,14 @@
     vertical-align: middle;
     width: 50px;
   }
+
+  .master-link {
+    display: block;
+  }
+
+  .contratado {
+    border-radius: 0;
+    height: 53px;
+    width: 400px;
+  }
 }
