Replacing Itunes with iTunes

--- a/_includes/modules/social.html
+++ b/_includes/modules/social.html
@@ -2,7 +2,7 @@
 	<ul>
 		<li>
 			<a href="{{ site.itunes_itpc }}" class="nav-itunes">
-				Escute no Itunes
+				Escute no iTunes
 			</a>
 		</li>
 		<li>
