--- a/_includes/modules/social.html
+++ b/_includes/modules/social.html
@@ -26,8 +26,8 @@
 			</a>
 		</li>
 		<li>
-			<a href="http://github.com/devnaestrada" class="nav-github">
-				Fork no github
+			<a href="https://github.com/devnaestrada/devnaestrada.com.br" class="nav-github">
+				Fork no Github
 			</a>
 		</li>
 	</ul>
