Adding Quick tip module

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
 
   <body>
 
+    {% include structure/quick-tips.html %}
+
     {% include structure/header.html %}
 
     {% include modules/cover-photo.html %}
