Update for page 404 style
Update made in order to set the new page 404 styles.

--- a/public/assets/scss/modules/blocks/_home-cast.scss
+++ b/public/assets/scss/modules/blocks/_home-cast.scss
@@ -38,3 +38,16 @@
 .home-cast__description {
   color: $home-cast-description;
 }
+
+.erroMessage{
+  text-align: center;
+}
+
+h3.erroMessage{
+  margin-top: 50px;
+}
+
+.erroImg{
+  margin: 30px auto;
+  display: block;
+}
