Remove quicktips and added new information on cover photo

--- a/_includes/modules/cover-photo.html
+++ b/_includes/modules/cover-photo.html
@@ -1,10 +1,10 @@
 <section class="cover-photo">
 	<div class="cover-photo__holder">
 		<h1 class="cover-photo__title">
-			O podcast do desenvolvedor
+			Episódio novo toda <span class="highlight">Sexta-feira</span>
 		</h1>
 		<h2 class="cover-photo__subtitle">
-			Entrevistas, discussões e eventos na comunidade
+			Desenvolvimento Front-end &amp; Back-end
 		</h2>
 		<nav class="social-nav">
 			<a href="http://www.facebook.com/{{ site.facebook_user }}" class="social-nav__link" title="Visite nossa página no Facebook">
