--- a/public/assets/scss/modules/structure/_cover-photo.scss
+++ b/public/assets/scss/modules/structure/_cover-photo.scss
@@ -4,13 +4,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 160px;
+  height: 130px;
   max-width: 100%;
   max-height: 480px;
   text-align: center;
 
   @media screen and (min-width: $tablet) {
-    height: 320px;
+    height: 300px;
   }
 }
 
@@ -31,18 +31,22 @@
 
 .cover-photo__title {
   @extend %default__cover-photo__title;
-  font-size: 22px;
+  font-size: 18px;
+
+  .highlight {
+    color: $primary-color;
+  }
 
   @media screen and (min-width: $tablet) {
-    font-size: 46px;
+    font-size: 38px;
   }
 }
 
 .cover-photo__subtitle {
   @extend %default__cover-photo__title;
-  font-size: 17px;
+  font-size: 14px;
 
   @media screen and (min-width: $tablet) {
-    font-size: 24px;
+    font-size: 20px;
   }
 }
