Adding more informations on title and fix css space on page home

--- a/_includes/structure/head.html
+++ b/_includes/structure/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="N9XWtKIGUTN-l2ozQVBkEz6zhjot-81MGAyxVFD_CDk" />
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | Podcast sobre desenvolvimento front-end &amp; back-end</title>
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <meta name="robots" content="index, follow">
