--- a/public/assets/scss/layout/_page-home.scss
+++ b/public/assets/scss/layout/_page-home.scss
@@ -1,7 +1,11 @@
 .page-home {
-  
+
   .home-cast {
-    margin-top: 90px;
+    margin-top: 30px;
+
+    @media screen and (min-width: $tablet) {
+      margin-top: 90px;
+    }
 
     &:first-child {
       margin: 0;
