--- a/_includes/structure/head.html
+++ b/_includes/structure/head.html
@@ -8,7 +8,7 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <meta name="robots" content="index, follow">
-  <meta name="keywords" content="frontend, front-end, backend, back-end, desenvolvimento, programação, podcast, cast, devnaestrada, femontanha, ramon sanches"/>
+  <meta name="keywords" content="frontend, front-end, backend, back-end, desenvolvimento, programação, podcast, cast, entrevista, episodio, devnaestrada, femontanha, ramon sanches, raymonsanches"/>
 
   {% if site.facebook_meta and page.author %}
   <meta property="og:locale" content="pt_BR">
