Changing H1 and H2 content

--- a/_includes/modules/cover-photo.html
+++ b/_includes/modules/cover-photo.html
@@ -1,10 +1,10 @@
 <section class="cover-photo">
 	<div class="cover-photo__holder">
 		<h1 class="cover-photo__title">
-			Episódio novo toda <span class="highlight">Sexta-feira</span>
+			Podcast sobre desenvolvimento <span class="highlight">Front-end</span> &amp; <span class="highlight">Back-end</span>
 		</h1>
 		<h2 class="cover-photo__subtitle">
-			Desenvolvimento Front-end &amp; Back-end
+			Episódio novo toda Sexta-feira
 		</h2>
 		<nav class="social-nav">
 			<a href="http://www.facebook.com/{{ site.facebook_user }}" class="social-nav__link" title="Visite nossa página no Facebook">
