--- a/_includes/modules/cover-photo.html
+++ b/_includes/modules/cover-photo.html
@@ -1,10 +1,10 @@
 <section class="cover-photo">
 	<div class="cover-photo__holder">
 		<h1 class="cover-photo__title">
-			Podcast sobre desenvolvimento <span class="highlight">Front-end</span> &amp; <span class="highlight">Back-end</span>
+			Podcast sobre desenvolvimento<br /> front-end &amp; back-end
 		</h1>
 		<h2 class="cover-photo__subtitle">
-			Episódio novo toda Sexta-feira
+			Novos episódios todas as <span class="highlight">Sexta-feira</span>
 		</h2>
 		<nav class="social-nav">
 			<a href="http://www.facebook.com/{{ site.facebook_user }}" class="social-nav__link" title="Visite nossa página no Facebook">
