--- a/_includes/modules/cover-photo.html
+++ b/_includes/modules/cover-photo.html
@@ -4,7 +4,7 @@
 			Podcast sobre desenvolvimento<br /> front-end &amp; back-end
 		</h1>
 		<h2 class="cover-photo__subtitle">
-			Novos episódios todas as <span class="highlight">Sexta-feira</span>
+			Novos episódios todas às <span class="highlight">sextas-feiras</span>
 		</h2>
 		<nav class="social-nav">
 			<a href="http://www.facebook.com/{{ site.facebook_user }}" class="social-nav__link" title="Visite nossa página no Facebook">
