improvement in semantic HTML. Fix the style for the grid columns supporters

--- a/public/assets/scss/modules/blocks/_supporters.scss
+++ b/public/assets/scss/modules/blocks/_supporters.scss
@@ -10,7 +10,7 @@
 
     @media screen and (min-width: $notebook) {
       @include span-columns(6);
-      @include omega(2n);
+      @include omega();
     }
   }
 
