--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page {{ page.css_class }}">
+<section class="page {{ page.css_class }}">
   <h1 class="page__title">{{ page.title }}</h1>
   {{ content }}
-</div>
+</section>
