Added a mini-store :)

--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -3,6 +3,7 @@
 		<a href="/" class="brand">
 			<img src="{{ "public/assets/img/brand.png" | prepend: site.baseurl }}" alt="DevNaEstrada" />
 		</a>
+		<a href="{{ "mini-loja" | prepend: site.baseurl }}" class="main-nav__link">Mini Loja</a>
 		<a href="{{ "criadores" | prepend: site.baseurl }}" class="main-nav__link">Criadores</a>
 		<a href="{{ "apoiadores" | prepend: site.baseurl }}" class="main-nav__link">Apoiadores</a>
 		<a href="{{ site.itunes_itpc }}" class="main-nav__link">iTunes</a>
