--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@
 @import "modules/blocks/home-cast";
 @import "modules/blocks/post-cast";
 @import "modules/blocks/supporters";
+@import "modules/blocks/item-store";
 
 // layout
 @import "layout/structure";
