--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -3,10 +3,9 @@
 		<a href="/" class="brand">
 			<img src="{{ "public/assets/img/brand.png" | prepend: site.baseurl }}" alt="DevNaEstrada" />
 		</a>
-		<a href="{{ "mini-loja" | prepend: site.baseurl }}" class="main-nav__link">Mini Loja</a>
+		<a href="{{ "lojinha" | prepend: site.baseurl }}" class="main-nav__link">Lojinha</a>
 		<a href="{{ "criadores" | prepend: site.baseurl }}" class="main-nav__link">Criadores</a>
 		<a href="{{ "apoiadores" | prepend: site.baseurl }}" class="main-nav__link">Apoiadores</a>
-		<a href="{{ site.itunes_itpc }}" class="main-nav__link">iTunes</a>
 		<span class="main-nav__link github-star">
 			<a class="github-button" href="https://github.com/devnaestrada/devnaestrada.com.br" data-icon="octicon-star" data-count-href="/devnaestrada/devnaestrada.com.br/stargazers" data-count-api="/repos/devnaestrada/devnaestrada.com.br#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star devnaestrada/devnaestrada.com.br on GitHub">Star</a>
 		</span>
