--- a/public/assets/scss/modules/blocks/_item-store.scss
+++ b/public/assets/scss/modules/blocks/_item-store.scss
@@ -86,6 +86,12 @@
   width: 100%;
 }
 
+.product-price {
+  margin-bottom: 0;
+  margin-top: 15px;
+  text-align: center;
+}
+
 .product-button {
   margin-top: 15px;
   text-align: center;
