--- a/_includes/structure/head.html
+++ b/_includes/structure/head.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <meta name="robots" content="index, follow">
   <meta name="keywords" content="frontend, front-end, backend, back-end, desenvolvimento, programação, podcast, cast, entrevista, episodio, devnaestrada, femontanha, ramon sanches, raymonsanches"/>
-  
+
   {% if site.facebook_meta %}
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:site_name" content="{{ site.title }}" />
@@ -19,7 +19,7 @@
   <meta property="og:description" content="{{ page.description }}" />
   <meta property="og:image" content="http://i1.sndcdn.com/artworks-{{ page.soundcloud-post-image }}-original.jpg" />
   <meta property="og:type" content="article">
-  <meta property="article:author" content="{{ page.title }}">
+  <meta property="article:author" content="DevNaEstrada">
   <meta property="article:section" content="Podcast" />
   <meta property="article:tag" content="Podcast, desenvolvimento web, front-end, back-end" />
   {% else if %}
