update link supports redirect to apoiase/devnaestrada/supporters

--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -5,7 +5,7 @@
 		</a>
 		<a href="{{ "lojinha" | prepend: site.baseurl }}" class="main-nav__link">Lojinha</a>
 		<a href="{{ "criadores" | prepend: site.baseurl }}" class="main-nav__link">Criadores</a>
-		<a href="{{ "apoiadores" | prepend: site.baseurl }}" class="main-nav__link">Apoiadores</a>
+		<a href="https://apoia.se/devnaestrada/supports" class="main-nav__link" target="_blank">Apoiadores</a>
 		<span class="main-nav__link github-star">
 			<a class="github-button" href="https://github.com/devnaestrada/devnaestrada.com.br" data-icon="octicon-star" data-count-href="/devnaestrada/devnaestrada.com.br/stargazers" data-count-api="/repos/devnaestrada/devnaestrada.com.br#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star devnaestrada/devnaestrada.com.br on GitHub">Star</a>
 		</span>
