fix margin pagination button in iphone retina resolution

--- a/public/assets/scss/modules/navigation/_pagination.scss
+++ b/public/assets/scss/modules/navigation/_pagination.scss
@@ -8,5 +8,9 @@
     &:first-child {
       margin-left: 0;
     }
+
+	@media screen and (max-width: $iphone-retina) {
+		margin-left: 15px;
+	}
   }
 }
