--- a/_includes/structure/head.html
+++ b/_includes/structure/head.html
@@ -36,7 +36,7 @@
 
   <link rel="publisher" href="https://plus.google.com/+DevnaestradaBrazil/">
   <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <!--Favicon-->
