include js scripts in the footer

--- a/_includes/structure/footer-scripts.html
+++ b/_includes/structure/footer-scripts.html
@@ -8,3 +8,6 @@
 <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nuq92&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
 </noscript>
 <!-- End Twitter universal website tag code -->
+<script src="/js/vendor/lunr.min.js"></script>
+<script src="/js/vendor/jquery-3.1.0.min.js"></script>
+<script src="/js/search.js"></script>
