New layout for search

--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -1,9 +1,11 @@
 // static colors
 $ligten: #fff !default;
 $darken: #000 !default;
+$neutral: gray !default;
 
 // core colors
 $primary-color: #e67e22 !default;
+$basic-color: #848484 !default;
 
 // base colors
 $link-color: #21272d !default;
