--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@
 @import "modules/structure/header";
 @import "modules/structure/footer";
 @import "modules/structure/cover-photo";
+@import "modules/structure/search-module";
 @import "modules/navigation/buttons";
 @import "modules/navigation/social-nav";
 @import "modules/navigation/pagination";
