--- a/public/assets/scss/modules/navigation/_buttons.scss
+++ b/public/assets/scss/modules/navigation/_buttons.scss
@@ -1,15 +1,16 @@
 .btn {
   @extend %inline-middle-block;
   @include transition(background-color .2s ease-in-out, color .2s ease-in-out);
-  padding: 0.6em 1.2em;
-  font-weight: 600;
-  font-family: $base-font;
-  text-align: center;
-  border: 2px solid $primary-color;
+  background-color: transparent;
   border-radius: 3px;
-  font-size: 0.8em;
-  text-transform: uppercase;
+  border: 2px solid $primary-color;
   color: $primary-color;
+  font-family: $base-font;
+  font-size: 0.8em;
+  font-weight: 600;
+  padding: 0.6em 1.2em;
+  text-align: center;
+  text-transform: uppercase;
 
   &:hover,
   &.active {
