Add bitly to the links

--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -13,7 +13,7 @@
 		<span class="advertiser-nav__call">
 			Quer apoiar esse projeto?
 		</span>
-		<a href="https://apoia.se/devnaestrada" class="btn" target="_blank">
+		<a href="http://bit.ly/dne-apoiase" class="btn" target="_blank">
 			<span class="more">QUERO!</span>
 			<span class="advertiser">Quero Apoiar</span>
 		</a>
