Update layout for Post Links and last episode

--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -21,3 +21,9 @@ $home-cast-description: $profile-role-color !default;
 $post-title-color: #263c4c !default;
 $post-meta-color: #848484 !default;
 $post-hr-color: #ddd !default;
+
+// sponsors
+$contratadome: #323a45 !default;
+$vanhack: #0077e0 !default;
+$alura: #fdc14a !default;
+$stickersdevs: #579fd6 !default;
