--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,9 @@
 @import "modules/blocks/post-cast";
 @import "modules/blocks/supporters";
 @import "modules/blocks/item-store";
+@import "modules/post-links";
+@import "modules/post-links-sponsors";
+@import "modules/post-support";
 
 // layout
 @import "layout/structure";
