--- a/public/assets/scss/modules/navigation/_social-nav.scss
+++ b/public/assets/scss/modules/navigation/_social-nav.scss
@@ -1,25 +1,34 @@
 .social-nav {
-  margin-top: 20px;
+  margin-top: rem(30);
   text-align: center;
+}
 
-  .social-nav__link {
-    @extend %inline-middle-block;
-    margin-left: 15px;
+.social-nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-    &:first-child {
-      margin-left: 0;
-    }
+.social-nav li {
+  @extend %inline-middle-block;
+  margin-left: 15px;
 
-    &:hover {
-      i {
-        color: $primary-color;
-      }
-    }
+  &:first-child {
+    margin-left: 0;
+  }
+}
 
-    i {
-      @include transition(color .2s ease-in-out);
-      color: $ligten;
-      font-size: 28px;
-    }
+.social-nav-link {
+  @include transition(all .2s ease-in-out);
+  background-color: $primary-color;
+  border-radius: 3px;
+  border: 2px solid $primary-color;
+  color: $ligten;
+  display: inline-block;
+  padding: 5px 10px;
+
+  &:hover {
+    background-color: transparent;
+    color: $ligten;
   }
 }
