--- a/public/assets/scss/modules/structure/_cover-photo.scss
+++ b/public/assets/scss/modules/structure/_cover-photo.scss
@@ -1,11 +1,15 @@
-.cover-photo {
-  background-color: $darken;
-  background-image: url(../public/assets/img/cover-photo.jpg);
-  background-repeat: no-repeat;
+/////////////////////////////////
+// name: Cover Photo
+////////////////////////////////
+
+.coverphoto {
+  @include align-items(center);
+  @include display(flex);
+  @include justify-content(center);
+  background: $darken url(../public/assets/img/cover-photo.jpg) center no-repeat;
   background-size: cover;
-  background-position: center;
+  max-height: rem(480);
   max-width: 100%;
-  max-height: 480px;
   text-align: center;
 
   @media screen and (min-width: $tablet) {
@@ -13,53 +17,14 @@
   }
 }
 
-.cover-photo__holder {
-  padding: 20px 0 20px;
-
-  @media screen and (min-width: $tablet) {
-    padding: 100px 0 100px;
-  }
+.coverphoto-holder {
+  //
 }
 
-%default__cover-photo__title {
+.coverphoto-title {
   color: $ligten;
+  font-size: rem(28);
   font-weight: 600;
-  margin-bottom: 0;
-  margin-top: 0;
-
-  .plus-info {
-    display: none;
-
-    @media screen and (min-width: $tablet) {
-      display: inline-block;
-    }
-  }
-
-  .highlight {
-    color: $primary-color;
-  }
-}
-
-.cover-photo__title {
-  @extend %default__cover-photo__title;
-  font-size: 18px;
-
-  br {
-    @media screen and (min-width: $tablet) {
-      display: none;
-    }
-  }
-
-  @media screen and (min-width: $tablet) {
-    font-size: 30px;
-  }
-}
-
-.cover-photo__subtitle {
-  @extend %default__cover-photo__title;
-  font-size: 14px;
-
-  @media screen and (min-width: $tablet) {
-    font-size: 28px;
-  }
+  margin: 0 auto;
+  max-width: rem(500);
 }
